// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totalling 
    $23,535,534.43
  </h3>
</div>
`;

exports[`Should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;
